--- a/app/src/main/res/drawable/imagenes.xml
+++ b/app/src/main/res/drawable/imagenes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/pandita" android:duration="1000" />
+    <item android:drawable="@drawable/yingyang" android:duration="1000" />
     <item android:drawable="@drawable/yingyang" android:duration="1000" />
 </animation-list>
