--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imagen"
+        android:id="@+id/img"
     />
-
-
-
-
-
 
 </android.support.constraint.ConstraintLayout>
